--- a/src/main/webapp/WEB-INF/html/teacher.html
+++ b/src/main/webapp/WEB-INF/html/teacher.html
@@ -9,6 +9,7 @@
      var course = ${section};
      var students = ${students};
      var seatingCharts = ${seatingCharts}; 
+     var curChart = ${curChart};
 </script>
 <link rel="stylesheet" href="css/app.css" />
 <title>Havaseet</title>
