--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -326,6 +326,11 @@
 					id="printRoutineLink" class="amber-text"
 				><i class="material-icons right">print</i>Print</a></li>
 				<li class="divider" tab-index="-1"></li>
+				<li class="divider" tab-index="-1"></li>
+				<li><a style="margin: 0 auto; text-align: center"
+					id="appSettingsLink" class="amber-text"
+				><i class="material-icons right">settings</i>Print</a></li>
+				<li class="divider" tab-index="-1"></li>
 			</ul>
 		</div>
 		<!-- end homeToolbar -->
