update to absolute url

--- a/index.html
+++ b/index.html
@@ -156,10 +156,9 @@
 	<!--Import Google Icon Font-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- load css from public repo -->
-	<link rel="stylesheet" href="css/adminlte.min.css">
-	<link rel="stylesheet" href="scripts/plugins/select2/css/select2.min.css">
-	<link rel="stylesheet" href="icons8/css/styles.css">
-	<link rel="stylesheet" href="css/app.css" />
+	<link rel="stylesheet" href="https://videmantay.github.io/havaseet/css/adminlte.min.css">
+	<link rel="stylesheet" href="https://videmantay.github.io/havaseet/scripts/plugins/select2/css/select2.min.css">
+	<link rel="stylesheet" href="https://videmantay.github.io/havaseet/css/app.css" />
 
 	<!-- end css-->
 	<title>Havaseet Apps Scripts</title>
@@ -440,11 +439,11 @@
 	<!--Prevent AdminLTE IFrame Error-->
 	<script>localStorage.setItem('AdminLTE:IFrame:Options',JSON.stringify({autoIframeMode:false,autoItemActive:false}))  </script>
 	<!-- load scripts from public repo -->
-	<script src="scripts/loader.js" type="text/javascript"></script>
-	<script src="scripts/svg/svg.all.js" type="text/javascript"></script>
-	<script src="scripts/plugins/select2/js/select2.min.js" type="text/javascript"></script>
-	<script src="scripts/main.js" type="text/javascript"></script>
-	<script src="scripts/seatingchart.js" type="text/javascript"></script>
-	<script src="scripts/colorpicker.js" type="text/javascript"></script>
+	<script src="https://videmantay.github.io/havaseet/scripts/loader.js" type="text/javascript"></script>
+	<script src="https://videmantay.github.io/havaseet/scripts/svg/svg.all.js" type="text/javascript"></script>
+	<script src="https://videmantay.github.io/havaseet/scripts/plugins/select2/js/select2.min.js" type="text/javascript"></script>
+	<script src="https://videmantay.github.io/havaseet/scripts/main.js" type="text/javascript"></script>
+	<script src="https://videmantay.github.io/havaseet/scripts/seatingchart.js" type="text/javascript"></script>
+	<script src="https://videmantay.github.io/havaseet/scripts/colorpicker.js" type="text/javascript"></script>
 </body>
 </html>
