adding col class to course

--- a/index.html
+++ b/index.html
@@ -445,9 +445,9 @@
 				<span aria-hidden="true">&times;</span>
 			  </button>
 			</div>
-			<div class="modal-body">
-			  <section id="courseList-panel" class="container" >
-
+			<div class="modal-body container">
+			  <section id="courseList-panel" class="row" >
+            
 			  </section>
 			</div>
 		  </div>
